[gd_scene load_steps=8 format=3 uid="uid://qxrclfgtkyyh"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_8htow"]
[ext_resource type="FontFile" uid="uid://ckklruywi4tw4" path="res://fonts/joystix monospace.otf" id="1_bdntw"]
[ext_resource type="Texture2D" uid="uid://c48ygxgcbhea" path="res://sprites/shit/gui.png" id="3_gxlm5"]
[ext_resource type="Texture2D" uid="uid://j7ilkad0cwl1" path="res://sprites/maps/gr√∂n.png" id="4_8uali"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bfuuo"]
texture = ExtResource("3_gxlm5")
region_rect = Rect2(0, 16, 64, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w7miq"]
texture = ExtResource("3_gxlm5")
region_rect = Rect2(0, 32, 64, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vaiv2"]
texture = ExtResource("3_gxlm5")
region_rect = Rect2(0, 0, 64, 16)
modulate_color = Color(1, 1, 1, 0.352941)

[node name="Settings" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8htow")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -31.5
offset_right = 225.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bdntw")
text = "Fullscreen"

[node name="fullscreen" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("1_bdntw")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bdntw")
text = "Window resolution"

[node name="resolutions" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
item_count = 4
popup/item_0/text = "960x540"
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "1600x900"
popup/item_2/id = 2
popup/item_3/text = "1920x1080"
popup/item_3/id = 3

[node name="back" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -470.0
offset_top = -260.0
offset_right = -387.0
offset_bottom = -228.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_bdntw")
theme_override_font_sizes/font_size = 17
theme_override_styles/hover = SubResource("StyleBoxTexture_bfuuo")
theme_override_styles/pressed = SubResource("StyleBoxTexture_w7miq")
theme_override_styles/normal = SubResource("StyleBoxTexture_vaiv2")
text = "Back"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(498.5, 258.5)
scale = Vector2(33.7188, 21.5938)
texture = ExtResource("4_8uali")

[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer2/fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="button_down" from="back" to="." method="_on_back_pressed"]
